<resources>
    <string name="app_name">Take it!</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="header_title">Options</string>
    <string name="sign_out">Sign Out</string>
    <string name="last_name">Last Name</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="please_fill_all_the_details">Please fill all the details</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="my_items">My Items</string>
    <string name="confirm">Confirm</string>
    <string name="no_permissions">No Permissions</string>
    <string name="item_name">Item Name</string>
    <string name="title">Title</string>
    <string name="item_description">Item Description</string>
    <string name="create">Create</string>
    <string name="msg_or_edit">Message or edit</string>
    <string name="item_created">Item Created Successfully</string>
    <string name="a_picture_is_required">A Picture is Required.</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="are_you_sure_you_want_to_delete">Delete Item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_electric_product">Electric Product</string>
    <string name="category_furniture">Furniture</string>
    <string name="category_books">Books and literature</string>
    <string name="category_media">Media</string>
    <string name="category_clothes">Clothes and fashion</string>
    <string name="category_hobbies">Hobbies</string>
    <string name="category_childcare">Childcare</string>
    <string name="category_social_assistance">Social Assistance</string>
    <string name="category_food">Food Product</string>
    <string name="category_animals">Animals</string>
    <string name="category_other">Other</string>
    <string name="region_center">Center Region</string>
    <string name="region_north">North Region</string>
    <string name="region_haifa">Haifa Region</string>
    <string name="region_jerusalem">Jerusalem Region</string>
    <string name="region_south">South Region</string>
    <string name="region_tel_aviv">Tel Aviv Region</string>
    <string name="category">Category:</string>
    <string name="please_wait_for_item_creation">Please Wait For Item Creation.</string>
    <string name="region">Region</string>
    <string name="text">Text</string>
    <string name="uploading">Uploading...</string>
    <string name="guest">Guest</string>
    <string name="guest_user_cannot_use_this">Guest user cannot use this function.</string>
    <string name="set_my_location">Set location</string>
    <string name="location">Location</string>
    <string name="fetching_location">Fetching location</string>
    <string name="catalog">Catalog</string>
</resources>