<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none"
        android:visible="true">
        <item
            android:id="@+id/drawer_menu_profile"
            android:checkable="false"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/drawer_menu_chats"
            android:checkable="false"
            android:icon="@drawable/ic_baseline_chat_bubble_24"
            android:iconTint="?attr/colorSecondary"
            android:title="@string/chats" />
        <item
            android:id="@+id/drawer_menu_log_out_item"
            android:checkable="false"
            android:icon="@drawable/outline_logout_24"
            android:title="@string/sign_out" />
    </group>
</menu>